@@ -1,3 +1,10 @@
+2009-01-12  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Projects/Project.cs:
+	* MonoDevelop.Projects/FileCopySet.cs: Make CopyToOutputDirectory files
+	include the project-relative path. Fixes "Bug 459311 - Copying files
+	to output directory in MonoDevelop".
+
 2009-01-09  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Projects.Dom/DomType.cs:
